--- a/codelabs/interface-utilisateur-interactive/index.html
+++ b/codelabs/interface-utilisateur-interactive/index.html
@@ -221,7 +221,7 @@
 <p>La figure animée suivante montre comment effectuer ces étapes:</p>
 <ol type="1" start="1">
 <li>Après avoir sélectionné le premier bouton (<code>Button</code>), modifiez le champ <code>ID</code> en haut du volet <strong>Attributes</strong> en <strong><code>button_toast</code></strong> pour l&#39;attribut <code>android:id</code>, utilisé pour identifier l&#39;élément dans la présentation (layout).</li>
-<li>Définissez l&#39;attribut <code>backgroundTint</code> sur <strong>@color/colorPrimary</strong>. (vous devez définir <code>colorPrimay</code> sous <code>colors.xml</code> avec la valeur <code>#410081</code>)</li>
+<li>Définissez l&#39;attribut <code>backgroundTint</code> sur <strong>@color/colorPrimary</strong>. (vous devez définir <strong>colorPrimary</strong> sous <code>colors.xml</code> avec la valeur <code>#410081</code>)</li>
 <li>Définissez l&#39;attribut <code>textColor</code> sur <strong>@android:color/white</strong>.</li>
 <li>Modifiez l&#39;attribut de <code>text</code> en <strong>Toast</strong>.</li>
 </ol>
