--- a/codelabs/recyclerview/index.html
+++ b/codelabs/recyclerview/index.html
@@ -80,7 +80,20 @@
       </google-codelab-step>
     
       <google-codelab-step label="Tâche 1: Créer un nouveau projet et un nouvel ensemble de données" duration="0">
-        <p>Avant de pouvoir afficher un <code>RecyclerView</code>, vous avez besoin de données à afficher. Dans cette tâche, vous allez créer un nouveau projet pour l&#39;application et un ensemble de données. Dans une application plus sophistiquée, vos données peuvent provenir du stockage interne (un fichier, une base de données SQLite, des préférences enregistrées), d&#39;une autre application (Contacts, Photos) ou d&#39;Internet (stockage en nuage, Google Sheets ou toute source de données avec une API). Le stockage et la récupération de données sont un sujet à part entière qui est abordé dans le chapitre sur le stockage de données. Pour cet exercice, vous allez simuler des données en les créant dans la méthode <code>onCreate()</code> de <code>MainActivity</code>.</p>
+        <p>Avant de pouvoir afficher un <code>RecyclerView</code>, vous avez besoin de données à afficher. Dans cette tâche, vous allez créer un nouveau projet pour l&#39;application et un ensemble de données. Dans une application plus sophistiquée, vos données peuvent provenir du stockage interne (un fichier, une base de données SQLite, des préférences enregistrées), d&#39;une autre application (Contacts, Photos) ou d&#39;Internet (stockage en nuage, Google Sheets ou toute source de données avec une API). Le stockage et la récupération de données sont un sujet à part entière qui est abordé dans le chapitre sur le stockage de données. Pour cet exercice, vous allez simuler des données en les créant dans la méthode <code>onCreate()</code> de <code>MainActivity</code>.<br><br></p>
+<aside class="warning"><p>Pour suivre ce codelab, vous devez activer la nouvelle interface utilisateur dans Android Studio Giraffe:</p>
+<ul>
+<li>à partir de la fenêtre &#34;Welcome to Android Studio&#34;:<br><strong>Customize &gt; All settings</strong></li>
+<li>à partir de la fenêtre du projet ouvert:<br><strong>File &gt; Settings</strong></li>
+</ul>
+<p class="image-container"><img style="width: 610.00px" src="img/3918482f0c611fa1.png"></p>
+<p>Pour activer la nouvelle interface utilisateur et afficher le menu principal dans une barre d&#39;outils séparée, cochez les deux paramètres suivants :</p>
+<ul>
+<li><strong>Enable new UI</strong></li>
+<li><strong>Show main menu in separate toolbar</strong></li>
+</ul>
+<p>Une fois ces paramètres cochés, vous devez redémarrer Android Studio pour que les changements soient appliqués.</p>
+</aside>
 <h2 is-upgraded>1.1. Créer le projet et la mise en page</h2>
 <ol type="1" start="1">
 <li>Créez un nouveau projet avec le nom <strong>RecyclerView</strong>, sélectionnez le modèle &#34;<strong>Basic Views Activity</strong>&#34;.</li>
